--- a/Ava.SocketTool/Ava.SocketTool.csproj
+++ b/Ava.SocketTool/Ava.SocketTool.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <OutputType>WinExe</OutputType>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ApplicationIcon>Assets\avalonia-logo.ico</ApplicationIcon>
@@ -26,5 +26,9 @@
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-rc1.1" />
         <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.19" />
         <PackageReference Include="ReactiveUI.Fody" Version="19.2.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SocketServer\SocketServer.csproj" />
     </ItemGroup>
 </Project>
