--- a/Ava.SocketTool/Ava.SocketTool.csproj
+++ b/Ava.SocketTool/Ava.SocketTool.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <ApplicationIcon>Assets\avalonia-logo.ico</ApplicationIcon>
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
