--- a/Ava.SocketTool/Ava.SocketTool.csproj
+++ b/Ava.SocketTool/Ava.SocketTool.csproj
@@ -23,9 +23,9 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-rc1.1" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-rc1.1" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-rc1.1" />
         <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.19" />
         <PackageReference Include="ReactiveUI.Fody" Version="19.2.1" />
+        <PackageReference Include="Semi.Avalonia" Version="11.0.0-rc1" />
     </ItemGroup>
 
     <ItemGroup>
