--- a/SocketServer/SocketServer.csproj
+++ b/SocketServer/SocketServer.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+      <PackageReference Include="Microsoft.Omex.Extensions.Hosting.Services" Version="20.0.5" />
       <PackageReference Include="SuperSocket" Version="2.0.0-beta.17" />
     </ItemGroup>
 
