--- a/Ava.SocketTool/Ava.SocketTool.csproj
+++ b/Ava.SocketTool/Ava.SocketTool.csproj
@@ -31,4 +31,8 @@
     <ItemGroup>
       <ProjectReference Include="..\SocketServer\SocketServer.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <AvaloniaXaml Remove="Styles\TreeView.axaml" />
+    </ItemGroup>
 </Project>
