--- a/SocketServer.Test/SocketServer.Test.csproj
+++ b/SocketServer.Test/SocketServer.Test.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>SockerServer.Test</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
