--- a/SocketServer/SocketServer.csproj
+++ b/SocketServer/SocketServer.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
       <PackageReference Include="Microsoft.Omex.Extensions.Hosting.Services" Version="20.0.5" />
       <PackageReference Include="SuperSocket" Version="2.0.0-beta.17" />
+      <PackageReference Include="SuperSocket.Client" Version="2.0.0-beta.17" />
       <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0-preview.5.23280.8" />
     </ItemGroup>
 
