--- a/Ava.SocketTool/Ava.SocketTool.csproj
+++ b/Ava.SocketTool/Ava.SocketTool.csproj
@@ -27,6 +27,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="ReactiveUI.Fody" Version="19.2.1" />
         <PackageReference Include="Semi.Avalonia" Version="11.0.0-rc1" />
+        <PackageReference Include="SuperSocket.Channel" Version="2.0.0-beta.17" />
     </ItemGroup>
 
     <ItemGroup>
