--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -19,13 +19,13 @@ jobs:
         dotnet-version: 7.0.x
         
     - name: Restore dependencies
-      run: dotnet restore /Ava.SocketTool.sln
+      run: dotnet restore ./Ava.SocketTool.sln
       
     - name: Build
-      run: dotnet build -c Release /Ava.SocketTool.slnn --no-restore
+      run: dotnet build -c Release ./Ava.SocketTool.slnn --no-restore
       
     - name: Test
-      run: dotnet test -c Release /Ava.SocketTool.sln --no-build --verbosity normal
+      run: dotnet test -c Release ./Ava.SocketTool.sln --no-build --verbosity normal
   
     - name: Pack
-      run: dotnet pack -c Release -o ./publish /Ava.SocketTool.sln /p:ContinuousIntegrationBuild=true
+      run: dotnet pack -c Release -o ./publish ./Ava.SocketTool.sln /p:ContinuousIntegrationBuild=true
