--- a/Ava.SocketTool/Ava.SocketTool.csproj
+++ b/Ava.SocketTool/Ava.SocketTool.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-<!--        <OutputType Condition="'$(Configuration.toUpper())' != 'DEBUG'">WinExe</OutputType>-->
-<!--        <OutputType Condition="'$(Configuration.toUpper())' == 'DEBUG'">Exe</OutputType>-->
-        <OutputType>WinExe</OutputType>
+        <OutputType Condition="'$(Configuration.toUpper())' != 'DEBUG'">WinExe</OutputType>
+        <OutputType Condition="'$(Configuration.toUpper())' == 'DEBUG'">Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
         <Nullable>disable</Nullable>
@@ -10,23 +9,21 @@
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <SatelliteResourceLanguages>zh-Hans</SatelliteResourceLanguages>
-        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <AssemblyVersion>0.0.1</AssemblyVersion>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
-        <!--添加aot-->
-        <!-- <PublishAot>true</PublishAot> -->
-        <!-- <PublishTrimmed>true</PublishTrimmed> -->
-<!--        <SelfContained>true</SelfContained>-->
+         <!--添加aot-->
+<!--         <PublishAot>true</PublishAot> -->
+<!--         <PublishTrimmed>true</PublishTrimmed> -->
+<!--         <SelfContained>true</SelfContained>-->
+<!--         <StripSymbols>true</StripSymbols>-->
     </PropertyGroup>
 
     <ItemGroup>
         <AvaloniaResource Include="Assets\**" />
     </ItemGroup>
-
     <ItemGroup>
-        <ProjectCapability Include="Avalonia" />
-        <TrimmerRootAssembly Include="Semi.Avalonia" />
+        <TrimmerRootDescriptor Include="Roots.xml" />
     </ItemGroup>
-    
 
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.0.0" />
@@ -34,7 +31,8 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0" />
-        <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.0.1" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0" />
+        <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.6.23329.7" />
         <PackageReference Include="ReactiveUI.Fody" Version="19.4.1" />
         <PackageReference Include="Semi.Avalonia" Version="11.0.0" />
@@ -46,5 +44,9 @@
 
     <ItemGroup>
       <AvaloniaXaml Remove="Styles\TreeView.axaml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services\" />
     </ItemGroup>
 </Project>
